--- a/master.css
+++ b/master.css
@@ -1,6 +1,6 @@
 :root{
     --col-white: #fffefb;
-    --col-grey: #585858;
+    --col-grey: #6e6e6e;
     --col-orange:  rgb(213, 197, 111) ;
   }
   
@@ -11,23 +11,24 @@
   }
   
   body {
-    background-color:  #b2cecf;
+    background-color: #6E6E6E;
     font-family: Arial, Helvetica, sans-serif;
   }
   
   .header {
-    background-color: lightgray;
-    padding: 27px;
+    background-color: #6E6E6E;
+    padding: 20px;
     text-align: center;
+    background-image: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Feagle.northwestu.edu%2Fdepartments%2Fwellness-center%2Fphysical-activity-and-exercise%2F&psig=AOvVaw25lu8NwraUkx95jYCwmPLu&ust=1648235894815000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCOCW3qm73_YCFQAAAAAdAAAAABAL") ;
   }
   
   .topnav {
     overflow: hidden;
-    background-color: black;
+    background-color: #6E6E6E ;
   }
   
   .topnav a {
-    float: left;
+    float: right;
     display: block;
     color: #f2f2f2;
     text-align: center;
@@ -40,47 +41,73 @@
     background-color: black;
     color: yellow;
   }
-  .myBtn{
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  border: none;
-  outline: none;
-  background-color: red;
-  color: white;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 10px;
-  font-size: 18px;
-  }
   
   .header-placeholder{
-    height: 60px;
+    height: 6px;
   }
   .exercise-video{
-    margin: 0 20px;
-    width: clamp(1px, 80vw, 800px);
-    position: relative;
+    margin-left: 50px;
+    margin-right: 50px;
+    width: 2000px;
+    position:relative;
     z-index: 0;
+    text-align: mid;
   }
-  
-  #myBtn {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
-    font-size: 18px;
-    border: none;
-    outline: none;
-    background-color: red;
-    color: white;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 4px;
+  .kezdolap{
+    text-align: bottom;
   }
-  #myBtn:hover {
-    background-color: #555;
-  }
+
+h1{
+  text-align: center;
+  margin-top: 20px;
+}
+
+iframe{
+  text-align: center;
+  margin: 5%;
+  width: 90%;
+  padding-top: 0px;
+  height: fit-content;
+
+}
+
+.topnavi {
+  overflow: hidden;
+  background-color: #333;
+  position: relative;
+}
+
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnavi #myLinks {
+  display: none;
+}
+
+/* Style navigation menu links */
+.topnavi a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+/* Style the hamburger menu */
+.topnavi a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+/* Add a grey background color on mouse-over */
+.topnavi a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active link (or home/logo) */
+.active {
+  background-color: #04AA6D;
+  color: white;
+}
